--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
@@ -6,19 +5,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width> <!-- Увеличенный размер -->
-    <height>200</height>
+    <width>800</width> <!-- Увеличенная ширина -->
+    <height>600</height> <!-- Увеличенная высота -->
    </rect>
   </property>
   <property name="windowTitle">
    <string>Qt File Downloader</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+    <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="descriptionLabel">
       <property name="text">
        <string>Enter the URL of the file you want to download and click 'Download'.</string>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
      </widget>
     </item>
@@ -39,6 +44,16 @@
        </widget>
       </item>
       <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Expanding</enum>
+        </property>
+       </spacer>
+      </item>
+      <item>
        <widget class="QPushButton" name="cancelButton">
         <property name="text">
          <string>Cancel</string>
@@ -46,15 +61,14 @@
         <property name="visible">
          <bool>false</bool>
         </property>
-        <property name="minimumSize">
-         <size>
-          <width>600</width>
-          <height>200</height>
-         </size>
-        </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <widget class="QTableView" name="tableView">
+      <!-- Настройка стиля таблицы здесь -->
+     </widget>
     </item>
     <item>
      <widget class="QProgressBar" name="progressBar">
@@ -64,11 +78,21 @@
       <property name="value">
        <number>0</number>
       </property>
+      <!-- Настройка стиля прогресс-бара здесь -->
      </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar"/>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>37</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
